<resources>
    <string name="app_name">Комора</string>
    <string name="empty_view_title_text">Наразі перелік пустий</string>
    <string name="empty_view_subtitle_text">Почніть добавляти в нього щось</string>
    <string name="action_delete_entry">Видалити</string>
    <string name="category_overview">Основне</string>
    <string name="shelf_name_tag">Назва полички</string>
    <string name="hint_item_name">Назва</string>
    <string name="hint_item_quantity">Кількість</string>
    <string name="action_save">Записати</string>
    <string name="category_description">Опис</string>
    <string name="hint_item_description">Введіть опис продукту</string>
    <string name="hint_shelf_description">Введіть опис полички</string>
    <string name="shelf_chooser">Поличка</string>
    <string name="dollarSign">$</string>
    <string name="hint_item_tag1">Тег 1</string>
    <string name="hint_item_tag2">Тег 2</string>
    <string name="hint_item_tag3">Тег 3</string>
    <string name="category_tag">Теги</string>
    <string name="cardview_shelf_label">Поличка:</string>
    <string name="cardview_quantity_label">Не знайдено:&#160;</string>
    <string name="editor_insert_item_successful">Записано</string>
    <string name="editor_insert_item_failed">Виникла помилка. Об\'єкт не записано.</string>
    <string name="action_delete_current_entry">Видалити</string>
    <string name="editor_delete_item_successful">Видалено</string>
    <string name="editor_delete_item_failed">Виникла помилка. Об\'єкт не видалено.</string>
    <string name="editor_activity_title_new_item">Додавання</string>
    <string name="editor_activity_title_edit_item">Редагування</string>
    <string name="editor_update_item_successful">Item updated successfully</string>
    <string name="editor_update_item_failed">Виникла помилка. Об\'єкт не оновлено.</string>
    <string name="delete">Видалити</string>
    <string name="cancel">Скасувати</string>
    <string name="delete_dialog_msg">Видалити елемент?</string>
    <string name="delete_all_dialog_msg">Видалити всі елементи?</string>
    <string name="return_dialog_msg">Зміни не записано. Дійсно вийти?</string>
    <string name="discard">Скасувати зміни</string>
    <string name="edit">Продовжити редагування</string>
    <string name="sort_dialog_msg">Відсортувати за</string>
    <string name="todo">TODO</string>
    <string name="hello_blank_fragment">Test value</string>
    <string name="in_stock">Кількість</string>
    <string name="description">Опис</string>
    <string name="tags">Теги</string>
    <string name="tag1">Тег 1</string>
    <string name="tag2">Тег 2</string>
    <string name="tag3">Тег 3</string>
    <string name="shelf_name">"Поличка"</string>
    <string name="edit_item">Редагування</string>
    <string name="three_dots">⋮</string>
    <string name="start_inventory_menu">Почати інвентаризацію</string>
    <string name="barcode">Штрих-код</string>
    <string name="qty_label">Кількість:</string>
</resources>
