<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.inventory.ItemViewActivity">

    <!-- Collapsable toolbar -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/item_image_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/image_prompt"
                android:adjustViewBounds="true"
                android:maxWidth="300dp"
                android:maxHeight="300dp"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingTop="16dp"
        app:layout_anchor="@+id/nestedScrollView"
        app:layout_anchorGravity="center"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_margin">

            <!-- Quantity field -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:maxWidth="42dp"
                    android:maxHeight="42dp"
                    android:paddingTop="16dp"
                    android:paddingRight="16dp"
                    android:src="@drawable/quantity_icon"
                    app:tint="@color/colorAccent" />


                <TextView
                    style="@style/ItemCategoryStyle"
                    android:text="@string/in_stock" />

                <!-- Dummy view takes up maximum space to right align everything-->
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/item_quantity_field"
                    style="@style/ItemFieldStyle" />

            </LinearLayout>

            <!-- Price field -->

            <!-- Description field -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Speech bubble icon -->
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:maxWidth="42dp"
                    android:maxHeight="42dp"
                    android:paddingTop="16dp"
                    android:paddingRight="16dp"
                    android:src="@drawable/description_icon"
                    app:tint="@color/colorAccent" />

                <TextView
                    style="@style/ItemCategoryStyle"
                    android:text="@string/description" />

            </LinearLayout>

            <TextView
                android:id="@+id/item_description_field"
                style="@style/ItemFieldStyle"
                android:paddingLeft="42dp"
                android:paddingBottom="16dp" />

            <!-- Tags field -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Speech bubble icon -->
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:maxWidth="42dp"
                    android:maxHeight="42dp"
                    android:paddingTop="16dp"
                    android:paddingRight="16dp"
                    android:src="@drawable/tag_icon"
                    app:tint="@color/colorAccent" />

                <!-- Tags label -->
                <TextView
                    style="@style/ItemCategoryStyle"
                    android:paddingRight="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/tags" />

                <!-- Tags -->
                <org.apmem.tools.layouts.FlowLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/item_tag1_field"
                        style="@style/TagStyle"
                        android:gravity="center"
                        android:text="@string/tag1" />

                    <TextView
                        android:id="@+id/item_tag2_field"
                        style="@style/TagStyle"
                        android:gravity="center"
                        android:text="@string/tag2" />

                    <TextView
                        android:id="@+id/item_tag3_field"
                        style="@style/TagStyle"
                        android:gravity="center"
                        android:text="@string/tag3" />

                </org.apmem.tools.layouts.FlowLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/item_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="true"
        android:tint="@color/white"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|right|end"
        app:srcCompat="@drawable/ic_edit_black_24dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>